<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="solved">solved</string>
    <string name="text">Wed Nov 14 11:56 EST2018</string>
    <string name="details">DETAILS</string>
    <string name="crime">Enter a title for the crime</string>
    <string name="title">TITLE</string>
    <string name="crime_title1">Crime Title</string>
    <string name="crime_date1">Crime Date</string>
    <string name="new_crime">New crime</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent</string>
    <string name="send_report">Send Crime</string>
</resources>